--- a/app/src/main/res/layout/activity_circle_reveal.xml
+++ b/app/src/main/res/layout/activity_circle_reveal.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageView4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             app:srcCompat="@android:drawable/ic_media_play" />
     </android.support.constraint.ConstraintLayout>
 
